Started final report

--- a/bibliography_report_tex/references_bibliography_report.bib
+++ b/bibliography_report_tex/references_bibliography_report.bib
@@ -41,7 +41,7 @@
   volume       = {56},
   date         = {2020},
   doi          = {10.1016/j.jmsy.2020.07.008},
-  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Towards multi-model approaches to predictive maintenance A systematic literature survey on diagnostics and prognostics.pdf:PDF},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/MONTEROJIMENEZ2020539 - Towards Multi Model Approaches to Predictive Maintenance_ a Systematic Literature Survey on Diagnostics and Prognostics.pdf:PDF},
   journaltitle = {Journal of Manufacturing Systems},
   keywords     = {Predictive maintenance, Systematic literature review, Diagnostics, Prognostics, Single-model approaches, Multi-model approaches},
   url          = {https://www.sciencedirect.com/science/article/pii/S0278612520301187},
@@ -143,7 +143,7 @@
   pages        = {528-533},
   volume       = {85},
   date         = {1963-12},
-  doi          = {https://doi.org/10.1115/1.3656900},
+  doi          = {10.1115/1.3656900},
   journaltitle = {Journal of Basic Engineering},
 }
 
@@ -155,7 +155,7 @@
   article-doi        = {10.1109/72.279181},
   completed          = {20121002},
   date               = {1994},
-  doi                = {DOI: 10.1109/72.279181},
+  doi                = {10.1109/72.279181},
   history            = {1994/01/01 00:00 [entrez]},
   issue              = {2},
   journaltitle       = {IEEE transactions on neural networks},
@@ -389,7 +389,7 @@
   title       = {{Development of predictive structural maintenance strategies for aircraft using model-based prognostics}},
   type        = {Theses},
   date        = {2017-03},
-  file        = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/2017WANGYivei.pdf:PDF},
+  file        = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Wang2017 - Development of Predictive Structural Maintenance Strategies for Aircraft Using Model Based Prognostics.pdf:PDF},
   hal_id      = {tel-01715558},
   hal_version = {v1},
   institution = {{INSA de Toulouse}},
@@ -406,22 +406,75 @@
   volume       = {7},
   date         = {2019-12},
   doi          = {10.1109/ACCESS.2019.2950985},
-  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/A_Review_on_Deep_Learning_Applications_in_Prognost.pdf:PDF},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Zhang2019 - A Review on Deep Learning Applications in Prognostics and Health Management.pdf:PDF},
   journaltitle = {IEEE Access},
 }
 
 @Article{Bai2018,
   author        = {Shaojie Bai and J. Zico Kolter and Vladlen Koltun},
-  journal       = {CoRR},
   title         = {An Empirical Evaluation of Generic Convolutional and Recurrent Networks for Sequence Modeling},
-  year          = {2018},
   volume        = {abs/1803.01271},
   archiveprefix = {arXiv},
   bibsource     = {dblp computer science bibliography, https://dblp.org},
   biburl        = {https://dblp.org/rec/journals/corr/abs-1803-01271.bib},
+  date          = {2018},
   eprint        = {1803.01271},
+  eprinttype    = {arxiv},
+  journaltitle  = {CoRR},
   timestamp     = {Mon, 13 Aug 2018 16:47:39 +0200},
-  url           = {http://arxiv.org/abs/1803.01271},
+}
+
+@Article{Elman1990,
+  author       = {Jeffrey L. Elman},
+  title        = {Finding structure in time},
+  issn         = {0364-0213},
+  number       = {2},
+  pages        = {179-211},
+  volume       = {14},
+  abstract     = {Time underlies many interesting human behaviors. Thus, the question of how to represent time in connectionist models is very important. One approach is to represent time implicitly by its effects on processing rather than explicitly (as in a spatial representation). The current report develops a proposal along these lines first described by Jordan (1986) which involves the use of recurrent links in order to provide networks with a dynamic memory. In this approach, hidden unit patterns are fed back to themselves; the internal representations which develop thus reflect task demands in the context of prior internal states. A set of simulations is reported which range from relatively simple problems (temporal version of XOR) to discovering syntactic/semantic features for words. The networks are able to learn interesting internal representations which incorporate task demands with memory demands; indeed, in this approach the notion of memory is inextricably bound up with task processing. These representations reveal a rich structure, which allows them to be highly context-dependent, while also expressing generalizations across classes of items. These representations suggest a method for representing lexical categories and the type/token distinction.},
+  date         = {1990},
+  doi          = {10.1016/0364-0213(90)90002-E},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Elman1990 - Finding Structure in Time.pdf:PDF},
+  journaltitle = {Cognitive Science},
+  url          = {https://www.sciencedirect.com/science/article/pii/036402139090002E},
+}
+
+@InCollection{Jordan1997,
+  author    = {Michael I. Jordan},
+  booktitle = {Neural-Network Models of Cognition},
+  publisher = {North-Holland},
+  title     = {Chapter 25 - Serial Order: A Parallel Distributed Processing Approach},
+  editor    = {John W. Donahoe and Vivian {Packard Dorsel}},
+  pages     = {471-495},
+  series    = {Advances in Psychology},
+  volume    = {121},
+  abstract  = {ABSTRACT
+A theory of learned sequential behavior is presented, with a focus on coarticulatory phenomena in speech. The theory is implemented as a recurrent parallel distributed processing network that is trained via a generalized error-correcting algorithm. The basic idea underlying the theory is that both serial order and coarticulatory overlap can be represented in terms of relative levels of activation in a network if a clear distinction is made between the state of the network and the output of the network.},
+  date      = {1997},
+  doi       = {10.1016/S0166-4115(97)80111-2},
+  file      = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Jordan1997 - Chapter 25 Serial Order_ a Parallel Distributed Processing Approach.pdf:PDF},
+  issn      = {0166-4115},
+  url       = {https://www.sciencedirect.com/science/article/pii/S0166411597801112},
+}
+
+@InProceedings{Yan2007,
+  author       = {Yan, Jihong and Wang, Pengxiang},
+  title        = {Blade Material Fatigue Assessment Using Elman Neural Networks},
+  volume       = {2007},
+  date         = {2007-01},
+  doi          = {10.1115/IMECE2007-43311},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Yan2007 - Blade Material Fatigue Assessment Using Elman Neural Networks.pdf:PDF},
+  journaltitle = {ASME Conference Proceedings},
+}
+
+@InProceedings{Kramti2018,
+  author    = {Kramti, Sharaf Eddine and Ben Ali, Jaouher and Saidi, Lotfi and Sayadi, Mounir and Bechhoefer, Eric},
+  booktitle = {2018 5th International Conference on Control, Decision and Information Technologies (CoDIT)},
+  title     = {Direct Wind Turbine Drivetrain Prognosis Approach Using Elman Neural Network},
+  pages     = {859-864},
+  date      = {2018},
+  doi       = {10.1109/CoDIT.2018.8394926},
+  file      = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Kramti2018 - Direct Wind Turbine Drivetrain Prognosis Approach Using Elman Neural Network.pdf:PDF},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
