Added to article skeleton

--- a/final_report_tex/acronyms.tex
+++ b/final_report_tex/acronyms.tex
@@ -2,7 +2,7 @@
 \newacronym{nlp}{NLP}{Natural Language Processing}
 \newacronym{phm}{PHM}{Prognostics and Health Management}
 \newacronym{rul}{RUL}{Remaining Useful Life}
-\newacronym{rnn}{RNN}{Recurrent Neural Networks}
+\newacronym{rnn}{RNN}{Recurrent Neural Network}
 \newacronym{lstm}{LSTM}{Long short-term memory}
 \newacronym{gru}{GRU}{Gated Recurrent Unit}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
