--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -114,7 +114,9 @@ Email: anass.akrim@univ-tlse3.fr}
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-This paper aims to compare Deep Learning models to predict the \gls{rul} of a structure. These models are separated into two families: \glspl{cnn} and \gls{rnn}. Once implemented, their hyperparameters are optimized and the models are compared on the basis of a metric.
+	
+% At the end update abstract
+This paper aims to compare Deep Learning models to predict the \gls{rul} of a structure. These models are separated into two families: \glspl{cnn} and \glspl{rnn}. Once implemented, their hyperparameters are optimized and the models are compared on the basis of a metric.
 \end{abstract}
 
 \IEEEpeerreviewmaketitle
@@ -122,11 +124,15 @@ This paper aims to compare Deep Learning models to predict the \gls{rul} of a st
 \section{Background}
 \label{sec:background}
 
-% Divide into sections
+\noindent
+\textbf{Deep Learning}
 
 In recent years Deep Learning, a subbranch of Machine Learning, has shown impressive results, especially in the fields of speech recognition, visual object recognition and object detection \cite{LeCun2015}. One requirement in using Deep Learning is the presence of sufficient amounts of data \cite{Sikorska2011}. As more data becomes available in the engineering domain there is a recent surge of interest in using Deep Learning in engineering \cite{Voulodimos2018}.
 
 One of the strengths of Deep Learning approaches is their ability to deal with and detect complex relationships in large datasets \cite{MONTEROJIMENEZ2020539}. This strength makes their usage also interesting in the \gls{phm} domain \cite{Wu2015}. The potential of Deep Learning in \gls{phm} might not be fully exploited yet \cite{Akrim2021}.
+
+\noindent
+\textbf{Prognostics and Health Management}
 
 According to \textsc{Zio} \cite{Zio2012} \gls{phm} is a field of research and application which aims at making use of past, present and future information on the environmental, operational and usage conditions of a piece of equipment in order to detect its degradation, diagnose its faults, predict and proactively manage its failures. In the context of this project only the detection of degradation and prediction of failure are relevant.
 
@@ -134,8 +140,6 @@ According to \textsc{Zio} \cite{Zio2012} \gls{phm} is a field of research and ap
 
 \section{Interest}
 \label{sec:interest}
-
-% Divide into sections
 
 Deep Learning has shown some impressive results when applied to \gls{rul} prediction as shown in \cite{Xu2018, Li2018, Liu2019, Yuan2016, Wu2018, Park2020} and other publications (For an overview see \textsc{Akrim et al.} \cite{Akrim2021}).
 
@@ -170,17 +174,32 @@ Different Deep Learning model architectures are to be used for \gls{rul} predict
 \section{Methods}
 \label{sec:methods}
 
-% Divide in chapter in sections
+% Divide chapter in sections
 
-% Explenation of classification and preparation of dataset
+\noindent
+\textbf{Available Dataset}
+
+% Explanation of classification and preparation of dataset
 
 As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}.
 
+To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
+
 % Add details on the explenation of the Deep Learning models
+
+\noindent
+\textbf{Recurrent Neural Networks}
 
 The common type of Deep Learning model for time series prediction are \glspl{rnn} \cite{Bai2018}. Standard \glspl{rnn} have some major drawbacks (vanishing/exploding gradient problem) which limit their application \cite{Bengio1994}. \gls{lstm} networks (\textsc{Hochreiter} and \textsc{Schmidhuber}) \cite{Hochreiter1997} avoid this problem and have established themselves as one of the most used Deep Learning model types, especially for \gls{nlp} \cite{Wu2016}. For these reasons \glspl{lstm} will be one of the investigated \gls{rnn} approaches in this project. Another investigated \gls{rnn} approach are the \glspl{gru}. It is a simplified version of the \gls{lstm}. Due to this simplicity it has been gaining in popularity in recent years \cite{Rana2016}. 
 
-Recent results suggest that \glspl{cnn} can match or even outperform \glspl{rnn} in time series related tasks \cite{Bai2018}. The second major focus of this work are therefore \gls{cnn} models. Besides the general \gls{cnn} architectures \glspl{tcn} (\textsc{Bai et al.} \cite{Bai2018}) are investigated in this work. A \gls{tcn} is a specific \gls{cnn} architecture that tries to replicate some of the best practices for \gls{cnn} architectures. As depicted in Fig. \ref{fig:tcn-architecture} a \gls{tcn} is composed of convolutional layers which include dilation. Through dilation \glspl{tcn} can increase their receptive field and therefore capture relationships over longer time sequences. For more details on \glspl{tcn} see \cite{Bai2018}.
+\noindent
+\textbf{Convolutional Neural Networks}
+
+Recent results suggest that \glspl{cnn} can match or even outperform \glspl{rnn} in time series related tasks \cite{Bai2018}. The second major focus of this work are therefore \gls{cnn} models.
+
+The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension. \cite{Akrim2021}
+
+Besides the general \gls{cnn} architectures \glspl{tcn} (\textsc{Bai et al.} \cite{Bai2018}) are investigated in this work. A \gls{tcn} is a specific \gls{cnn} architecture that tries to replicate some of the best practices for \gls{cnn} architectures. As depicted in Fig. \ref{fig:tcn-architecture} a \gls{tcn} is composed of convolutional layers which include dilation. Through dilation \glspl{tcn} can increase their receptive field and therefore capture relationships over longer time sequences. For more details on \glspl{tcn} see \cite{Bai2018}.
 
 \begin{figure}[htp]
 	\centering
@@ -189,18 +208,32 @@ Recent results suggest that \glspl{cnn} can match or even outperform \glspl{rnn}
 	\label{fig:tcn-architecture}
 \end{figure}
 
-The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension. \cite{Akrim2021}
+% Given an overview of the used evaluation metrics and why they are used
 
-In one of the first applications of \glspl{cnn} to \gls{phm} \textsc{Li et al.} suggested that \glspl{cnn} can be used to obtain \gls{rul} prognoses for machinery \cite{Li2018}. The model was applied to the C-MAPSS dataset \cite{Saxena2008} and outperformed state-of-the-art prognostics approaches including \gls{rnn} and \gls{lstm} models. To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
-
-% Details on the hyperparameter optimization strategies
+% Details on the hyperparameter optimization strategies (how the models are trained and how their parameters are optimised)
 
 \section{Results}
 \label{sec:results}
 
+% Show the used model architectures for rnn and cnn and why they are used
+
+% Give an overview of the results of the hyperparameter optimisation strategies for the rnn and cnn networks
+
+% Show the detailed results of some networks with more detailed evaluation metrics
+
+% Compare the rnn and cnn results
 
 \section{Conclusions}
 \label{sec:conclusions}
+
+% Give an overview of the general results of the study
+
+% List the results of the best models and justify the choice for a best model
+
+% Compare the final results with the aims set at the beginning
+
+% Give an outlook for future research on the topic
+
 
 
 \printbibliography
