--- a/final_report_tex/references_final_report.bib
+++ b/final_report_tex/references_final_report.bib
@@ -491,4 +491,14 @@ A theory of learned sequential behavior is presented, with a focus on coarticula
   url     = {https://medium.com/@Rehan_Sayyad/how-to-use-convolutional-neural-networks-for-time-series-classification-80575131a474},
 }
 
+@Article{Chen2021,
+  author  = {Chen, Guang},
+  journal = {Computational Mechanics},
+  title   = {Recurrent neural networks (RNNs) learn the constitutive law of viscoelasticity},
+  year    = {2021},
+  month   = {03},
+  volume  = {67},
+  doi     = {10.1007/s00466-021-01981-y},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
