--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -173,16 +173,42 @@ The aim of this work is to predict the \gls{rul} based on current and past infor
 
 % Explanation of classification and preparation of dataset (Thomas)
 
-As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}.
+As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}. The generated dataset was composed of 80,000 cycles at most. Therefore the chosen strategy has been to create 20 intervals following a parabolic equation. The last class would be for a \gls{rul} over 80,000 cycles away.
 
-To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
 
-% Add details on the explenation of the RNN Deep Learning models (Thomas)
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=6cm]{RUL_Classification.png}
+	\caption{\gls{rul} classification strategy}
+	\label{fig:RNN-classification}
+\end{figure}
 
+
+To prepare the data for the \gls{cnn} and \glspl{rnn} models a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
+
+As an input for the different models, datasets had to be normalized. While a specific layer was added at the beggining of \gls{cnn} and \gls{tcn} architectures to do so, 
+
+% Add details on the explanation of the RNN Deep Learning models (Thomas)
+\newpage
 \noindent
 \textbf{Recurrent Neural Networks}
 
-The common type of Deep Learning model for time series prediction are \glspl{rnn} \cite{Bai2018}. Standard \glspl{rnn} have some major drawbacks (vanishing/exploding gradient problem) which limit their application \cite{Bengio1994}. \gls{lstm} networks (Hochreiter and Schmidhuber \cite{Hochreiter1997}) avoid this problem and have established themselves as one of the most used Deep Learning model types, especially for \gls{nlp} \cite{Wu2016}. For these reasons \glspl{lstm} will be one of the investigated \gls{rnn} approaches in this project. Another investigated \gls{rnn} approach are the \glspl{gru}. It is a simplified version of the \gls{lstm}. Due to this simplicity it has been gaining in popularity in recent years \cite{Rana2016}. 
+The common type of Deep Learning model for time series prediction are \glspl{rnn} \cite{Bai2018}. Due to their ability to store information within the cell, it can better remember information of a time-dependant data. 
+
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=6cm]{RNN-cell-architecture.png}
+	\caption{RNN cell architecture. a A simple RNN unit; b an LSTM unit \cite{Chen2021}}
+	\label{fig:RNN-classification}
+\end{figure}
+
+However, standard \glspl{rnn} have some major drawbacks, such as the vanishing or exploding gradient problem, which limit their application \cite{Bengio1994}. \gls{lstm} networks (Hochreiter and Schmidhuber \cite{Hochreiter1997}) avoid this problem and have established themselves as one of the most used Deep Learning model types, especially for \gls{nlp} \cite{Wu2016}. For these reasons \glspl{lstm} will be one of the investigated \gls{rnn} approaches in this project. Another investigated \gls{rnn} approach are the \glspl{gru}. It is a simplified version of the \gls{lstm}. Due to this simplicity it has been gaining in popularity in recent years \cite{Rana2016}. Then, a simple \gls{rnn} architecture will be explored to evaluate the possible benefits of more complex structures.
+
+
+
+
+
 
 % Add details on the explenation of the CNN Deep Learning models (Paul)
 
